# learn_OpenGL

./: .clangd  .gitignore  CMakeLists.txt  Makefile  learn_opengl
include/: Application.hpp  Camera.hpp
res/shaders/: Basic.shader  Basic_fragment.shader  Basic_vertex.shader  Tex_fragment.shader  Tex_vertex.shader  Yellow_fragment.shader  uniform_vertex.shader
src/: Application.cpp  GLCreateVertex.cpp  ShadersProcess.cpp  glad.c
src/GL_function/: GLCreateVertex.cpp
src/Scene/: Camera.cpp
src/VertexBuffer/: GLCreateVertex.cpp  GLError.cpp
src/shaders/: Shader.cpp  ShadersProcess.cpp
src/shaders/textures/: Texture.cpp
